--- a/css/styles.css
+++ b/css/styles.css
@@ -14,106 +14,37 @@ body {
   font-family: Roboto, sans-serif;
   letter-spacing: 0.03em;
 }
-
-b,
-ul,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+ul,
+p,
+b {
   margin: 0;
   padding: 0;
 }
-
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.container {
-  display: flex;
+.conteiner {
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  align-items: center;
   padding-left: 15px;
   padding-right: 15px;
-  width: 1230px;
+
+  outline: 2px solid rgb(225, 169, 159);
 }
 
-.container.header {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1230px;
-}
-.container-footer {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 1230px;
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-
-/* button----------------------------------------  */
-button {
-  cursor: pointer;
-}
-/* button hero */
-.button .primary {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  margin-top: 30px;
-
-  color: var(--primary-wite-color);
-  background-color: var(--akcent);
-  border-radius: 4px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  outline: 0px;
-  width: 200px;
-  height: 50px;
-}
-
-/* button two page */
-.button .secondary {
-  display: block;
-  margin-right: auto;
-  margin-left: auto;
-  outline: auto var(--primary-wite-color);
-
-  font-family: Roboto, sans-serif;
-  color: var(--primery-text-cplor);
-  background-color: var(--secondary-color-two);
-  font-family: Roboto, sans-serif;
-  border-radius: 4px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-}
-
-.button .secondary:hover,
-.button .secondary:focus {
-  color: var(--primary-wite-color);
-  background-color: var(--akcent);
-}
-
-/* header---------------------------------------- */
-header {
-  outline: 1px solid rgba(236, 236, 236, 1);
-}
 /* logo----------------------------------------  */
 
-.logo.heder {
+.logo {
   margin-right: 93px;
 
   color: var(--akcent);
@@ -121,7 +52,6 @@ header {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
-
   text-decoration: none;
 }
 
@@ -129,16 +59,84 @@ header {
   color: var(--primery-text-cplor);
 }
 
-/* nav----------------------------------------- */
+/* BUTTON ----------------------------------------  */
+
+/* button hero ---------------------------------------- */
+.button .primary {
+  margin-top: 30px;
+
+  width: 200px;
+  height: 50px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  color: var(--primary-wite-color);
+  background-color: var(--akcent);
+  cursor: pointer;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+}
+
+/* button two page ---------------------------------------- */
+.button.conteiner .list.main {
+  display: flex;
+  justify-content: center;
+}
+.button.conteiner .main .item:not(:last-child) {
+  margin-right: 30px;
+}
+.button .secondary {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 22px;
+  padding-right: 22px;
+
+  font-family: Roboto, sans-serif;
+  color: var(--primery-text-cplor);
+  background-color: var(--secondary-color-two);
+  cursor: pointer;
+  font-family: Roboto, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  border-radius: 4px;
+}
+
+.button .secondary:hover,
+.button .secondary:focus {
+  color: var(--primary-wite-color);
+  background-color: var(--akcent);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+/* HEADER ---------------------------------------- */
+
+.main-meny {
+  display: flex;
+}
+.main-meny .nav {
+  display: flex;
+  align-items: center;
+}
+.site-nav .link.curent {
+  color: var(--akcent);
+}
+
+/* nav ---------------------------------------- */
 .site-nav {
   display: flex;
 }
-.site-nav .item {
-  margin-right: 50px;
+.site-nav .item:not(:last-child) {
+  margin-right: 30px;
 }
-.site-nav .item:last-child {
-  margin-right: 0;
-}
+/* .site-nav .item + .item {
+  margin-left: 30px;
+} */
+
 .site-nav .link {
   display: block;
   padding-top: 32px;
@@ -156,15 +154,18 @@ header {
   color: var(--akcent);
 }
 
-/* auth----------------------------------------  */
-
+/* auth---------------------------------------- */
 .site-auth {
   display: flex;
   margin-left: auto;
 }
-.site-auth .item + .item {
-  margin-left: 50px;
+.site-auth .item:not(:last-child) {
+  margin-right: 30px;
 }
+/* .site-auth .item + .item {
+  margin-left: 30px;
+} */
+
 .site-auth .link {
   display: block;
   padding-top: 32px;
@@ -182,207 +183,156 @@ header {
   color: var(--akcent);
 }
 
-.site-nav .link.curent {
-  color: var(--akcent);
-}
+/* MAIN ---------------------------------------- */
 
-/* main---------------------------------------- */
-/* hero---------------------------------------- */
-.content.hero {
-  display: block;
+/* content one page ---------------------------------------- */
+
+/* hero ---------------------------------------- */
+.content.button {
   text-align: center;
-  height: 600px;
 
+  padding-top: 200px;
+  padding-bottom: 200px;
   background-color: var(--color-fon-hed-fot);
   text-transform: uppercase;
 }
 .content .hero-text {
-  display: inline-block;
+  margin-left: auto;
+  margin-right: auto;
+
   width: 696px;
   height: 120px;
-  padding-top: 200px;
-  margin: 0;
-
   color: var(--primary-wite-color);
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
 }
-/* work---------------------------------------- */
-.work .container {
-  margin-top: 94px;
-}
-.work-factory {
-  margin-left: 30px;
-}
-.work-factory:nth-child(-n + 1) {
-  margin-left: 0;
-}
-.fon-dop-img {
-  display: block;
-  width: 270px;
-  height: 120px;
-  background-color: rgba(245, 244, 250, 1);
-}
-.fon-dop-img img {
+/* work ---------------------------------------- */
+.content .work {
   display: flex;
-  margin-right: auto;
-  margin-left: auto;
-  background-color: rgba(245, 244, 250, 1);
+  padding-top: 94px;
 }
-.work-main {
-  display: block;
-  margin-bottom: 10px;
-  margin-top: 30px;
+.content .work .item:not(:last-child) {
+  margin-right: 30px;
+}
+.content .work-main {
+  display: flex;
+  padding-bottom: 10px;
 
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
 }
-.work-secondary {
-  margin: 0;
-
+.content .work-secondary {
+  width: 270px;
+  height: 75px;
   color: var(--secondary-color);
   font-size: 14px;
   line-height: 1.71;
 }
 
-/* photo---------------------------------------- */
-.photo-factory {
+/* photo ---------------------------------------- */
+.content.photo {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
+.content.photo .list {
+  display: flex;
+  padding-top: 50px;
+}
+.content.photo .list .photo:not(:last-child) {
   margin-right: 30px;
 }
-.photo-factory:nth-child(+ 3) {
-  margin-right: 0;
-}
 
-.head-text {
-  text-align: center;
-  margin-bottom: 50px;
-  padding-top: 93px;
-
+.content .head-text {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
-}
-
-/* employees---------------------------------------- */
-.head-text-employees {
   text-align: center;
-  margin-top: 94px;
-  margin-bottom: 50px;
-  padding-top: 93px;
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
 }
-.content.employees {
+/* employees ---------------------------------------- */
+.employees {
   background-color: var(--secondary-color-two);
 }
-.content.employees .fon {
-  background-color: var(--primary-wite-color);
-  margin-right: 30px;
-  margin-bottom: 94px;
+.employees .conteiner {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
-.fon:nth-child(+ 1) {
-  margin: 0;
-}
-.photo-text-page-one {
-  display: block;
+.employees .head-text {
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
   text-align: center;
 }
-.content .employees-main {
+.employees .list {
+  display: flex;
+}
+.employees .fon:not(:last-child) {
+  margin-right: 30px;
+}
+.employees .fon {
+  background-color: var(--primary-wite-color);
+}
+.employees-main {
+  display: flex;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  justify-content: center;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  margin-top: 30px;
 }
-.content .employees-secondary {
-  color: var(--secondary-color);
+.employees-secondary {
+  display: flex;
+  margin-bottom: 30px;
+  justify-content: center;
 
+  color: var(--secondary-color);
   font-size: 16px;
   line-height: 1.18;
-
-  margin-top: 10px;
 }
 
-/* best clients */
-.clients {
-  display: flex;
+/* content two page ---------------------------------------- */
+.conteiner.two-page {
+  padding-top: 94px;
   padding-bottom: 94px;
 }
-.best-clients {
-  display: flex;
-  margin-right: 30px;
 
-  width: 170px;
-  height: 92px;
-  border: 1px solid #afb1b8;
-  border-radius: 4px;
-
-  cursor: pointer;
-  background-color: #fff;
-}
-.best-clients:hover,
-.best-clients:focus {
-  border: 1px solid var(--akcent);
-}
-.best-clients-logo:hover,
-.best-clients-logo:focus {
-  color: var(--akcent);
-}
-
-/* content two page---------------------------------------- */
-
-.container.main {
-  width: 495px;
-  margin-top: 94px;
-}
-.container.main .secondary {
-  display: flex;
-  margin-right: 8px;
-}
-.content-two-page {
+.photo-t-p {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 50px;
-  margin-bottom: 94px;
+  /* justify-content: space-between; */
 }
-.text-info-photo {
-  display: inline-block;
-  padding-left: 24px;
-}
-
-.photo-text {
-  box-sizing: border-box;
-  height: 404px;
-  width: 370px;
+.photo-t-p .item {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.photo-text:nth-child(3n) {
+.photo-t-p .item:nth-child(3n) {
   margin-right: 0;
 }
-.photo-text:nth-last-child(-n + 3) {
+.photo-t-p .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.photo-imag {
-  text-decoration: none;
-}
-.photo-text:hover,
-.photo-text:focus {
+.photo-t-p .item:hover,
+.photo-t-p .item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.photo-text {
+  padding: 0;
+  text-decoration: none;
+}
 .photo-main {
-  display: inline-block;
-  width: 322px;
-  height: 36;
-  text-align: left;
+  display: block;
+  padding-bottom: 8px;
+  padding-top: 20px;
+  padding-left: 24px;
 
   color: var(--primery-text-cplor);
   font-weight: 700;
@@ -391,50 +341,46 @@ header {
   letter-spacing: 0.06em;
 }
 .photo-secondary {
-  display: inline-block;
-  width: 322px;
-  height: 30;
-  text-align: left;
-  margin-top: 4px;
+  display: block;
+  padding-left: 24px;
+  padding-bottom: 20px;
 
   color: var(--secondary-color);
-
   font-size: 18px;
   line-height: 1.97;
 }
 
-/* footer---------------------------------------- */
-.footer {
+/* FOOTER ---------------------------------------- */
+footer {
   background-color: var(--color-fon-hed-fot);
 }
-
-.logo.footer {
+.footer.conteiner {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.footer .logo {
   display: block;
-  color: var(--akcent);
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-
-  text-decoration: none;
   margin-bottom: 20px;
 }
 .footer-studio {
   color: var(--primary-wite-color);
 }
 .footer .footer-adres {
+  display: block;
+  margin-bottom: 8px;
+
   color: #fff;
   font-size: 14px;
   line-height: 1.7;
-
   text-decoration: none;
 }
 .footer .footer-nav {
-  color: rgba(255, 255, 255, 0.6);
+  display: block;
+  margin-bottom: 8px;
 
+  color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
   line-height: 1.7;
-
   text-decoration: none;
 }
 
