--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ b {
 /* BUTTON ----------------------------------------  */
 
 /* button hero ---------------------------------------- */
-.button .primary {
+.hero .primary {
   margin-top: 30px;
 
   width: 200px;
@@ -81,32 +81,31 @@ b {
 }
 
 /* button two page ---------------------------------------- */
-.button.conteiner .list.main {
+.two-page.conteiner .list.main {
   display: flex;
   justify-content: center;
 }
-.button.conteiner .main .item:not(:last-child) {
-  margin-right: 30px;
+.conteiner .main .item:not(:last-child) {
+  margin-right: 8px;
 }
-.button .secondary {
+.two-page .secondary {
   padding-top: 6px;
   padding-bottom: 6px;
+  padding-left: 22px;
   padding-right: 22px;
-  padding-right: 22px;
+  border-radius: 4px;
+  border: 0ch;
 
   font-family: Roboto, sans-serif;
   color: var(--primery-text-cplor);
   background-color: var(--secondary-color-two);
-  cursor: pointer;
-  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
-  border-radius: 4px;
 }
 
-.button .secondary:hover,
-.button .secondary:focus {
+.two-page .secondary:hover,
+.two-page .secondary:focus {
   color: var(--primary-wite-color);
   background-color: var(--akcent);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -131,7 +130,7 @@ b {
   display: flex;
 }
 .site-nav .item:not(:last-child) {
-  margin-right: 30px;
+  margin-right: 50px;
 }
 /* .site-nav .item + .item {
   margin-left: 30px;
@@ -188,7 +187,7 @@ b {
 /* content one page ---------------------------------------- */
 
 /* hero ---------------------------------------- */
-.content.button {
+.content.hero {
   text-align: center;
 
   padding-top: 200px;
@@ -208,23 +207,46 @@ b {
   line-height: 1.36;
   letter-spacing: 0.06em;
 }
+
 /* work ---------------------------------------- */
+
+.content.work {
+  padding-top: 94px;
+}
 .content .work {
   display: flex;
-  padding-top: 94px;
 }
 .content .work .item:not(:last-child) {
   margin-right: 30px;
 }
+
+.content .work .item2 {
+  width: 270px;
+  height: 120px;
+
+  background-image: url(../images/Vector.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: var(--secondary-color-two);
+}
+/* .content .work .item2 .item3 {
+  display: flex;
+  padding-top: 25px;
+  margin-left: auto;
+  margin-right: auto;
+} */
+
 .content .work-main {
   display: flex;
   padding-bottom: 10px;
+  padding-top: 30px;
 
   text-transform: uppercase;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
 }
+
 .content .work-secondary {
   width: 270px;
   height: 75px;
@@ -253,14 +275,14 @@ b {
   line-height: 1.16;
   text-align: center;
 }
+
 /* employees ---------------------------------------- */
 .employees {
-  background-color: var(--secondary-color-two);
-}
-.employees .conteiner {
   padding-top: 94px;
   padding-bottom: 94px;
+  background-color: var(--secondary-color-two);
 }
+
 .employees .head-text {
   margin-bottom: 50px;
   font-weight: 700;
@@ -276,29 +298,33 @@ b {
 }
 .employees .fon {
   background-color: var(--primary-wite-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.employees-div {
+  display: block;
+  text-align: center;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 .employees-main {
-  display: flex;
-  margin-top: 30px;
-  margin-bottom: 10px;
-  justify-content: center;
+  padding-bottom: 10px;
 
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
 }
-.employees-secondary {
-  display: flex;
-  margin-bottom: 30px;
-  justify-content: center;
 
+.employees-secondary {
   color: var(--secondary-color);
   font-size: 16px;
   line-height: 1.18;
 }
 
 /* content two page ---------------------------------------- */
-.conteiner.two-page {
+main.main {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -306,6 +332,7 @@ b {
 .photo-t-p {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 50px;
   /* justify-content: space-between; */
 }
 .photo-t-p .item {
@@ -352,12 +379,11 @@ b {
 
 /* FOOTER ---------------------------------------- */
 footer {
-  background-color: var(--color-fon-hed-fot);
-}
-.footer.conteiner {
   padding-top: 60px;
   padding-bottom: 60px;
+  background-color: var(--color-fon-hed-fot);
 }
+
 .footer .logo {
   display: block;
   margin-bottom: 20px;
