--- a/css/styles.css
+++ b/css/styles.css
@@ -39,24 +39,7 @@ b {
   padding-left: 15px;
   padding-right: 15px;
 
-  outline: 2px solid rgb(225, 169, 159);
-}
-
-/* logo----------------------------------------  */
-
-.logo {
-  margin-right: 93px;
-
-  color: var(--akcent);
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.2;
-  text-decoration: none;
-}
-
-.logo .studio {
-  color: var(--primery-text-cplor);
+  /* outline: 2px solid rgb(225, 169, 159); */
 }
 
 /* BUTTON ----------------------------------------  */
@@ -78,6 +61,11 @@ b {
   line-height: 1.88;
   text-align: center;
   letter-spacing: 0.06em;
+}
+.hero .primary:hover,
+.hero .primary:focus {
+  color: var(--primery-text-cplor);
+  background-color: var(--primary-wite-color);
 }
 
 /* button two page ---------------------------------------- */
@@ -114,6 +102,9 @@ b {
 
 /* HEADER ---------------------------------------- */
 
+header {
+  border: 1px solid #ececec;
+}
 .main-meny {
   display: flex;
 }
@@ -123,6 +114,21 @@ b {
 }
 .site-nav .link.curent {
   color: var(--akcent);
+}
+
+/* logo----------------------------------------  */
+.logo {
+  margin-right: 93px;
+
+  color: var(--akcent);
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  text-decoration: none;
+}
+.logo .studio {
+  color: var(--primery-text-cplor);
 }
 
 /* nav ---------------------------------------- */
@@ -160,15 +166,17 @@ b {
 }
 .site-auth .item:not(:last-child) {
   margin-right: 30px;
+  align-items: center;
 }
 /* .site-auth .item + .item {
   margin-left: 30px;
 } */
 
 .site-auth .link {
-  display: block;
+  display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
+  align-items: center;
 
   color: var(--secondary-color);
   font-weight: 500;
@@ -180,6 +188,23 @@ b {
 .site-auth .link:hover,
 .site-auth .link:focus {
   color: var(--akcent);
+}
+
+.site-auth .link::before {
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+
+  content: "";
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: auto;
+}
+.item-envel::before {
+  background-image: url(../images/icon.svg/envelope.svg);
+}
+.item-smartp::before {
+  background-image: url(../images/icon.svg/smartphone.svg);
 }
 
 /* MAIN ---------------------------------------- */
@@ -195,6 +220,12 @@ b {
   background-color: var(--color-fon-hed-fot);
   text-transform: uppercase;
 }
+.content.hero.Icon-Hero {
+  display: block;
+  background-image: url(../images/Img-Hero.jpg);
+  background-position: center;
+}
+
 .content .hero-text {
   margin-left: auto;
   margin-right: auto;
@@ -213,28 +244,35 @@ b {
 .content.work {
   padding-top: 94px;
 }
+
 .content .work {
   display: flex;
 }
+
 .content .work .item:not(:last-child) {
   margin-right: 30px;
 }
-
-.content .work .item2 {
-  width: 270px;
+.content .work .item::before {
+  display: block;
+  content: "";
   height: 120px;
-
-  background-image: url(../images/Vector.png);
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
+  /* background-size: contain; */
   background-color: var(--secondary-color-two);
 }
-/* .content .work .item2 .item3 {
-  display: flex;
-  padding-top: 25px;
-  margin-left: auto;
-  margin-right: auto;
-} */
+.content .work .icon1::before {
+  background-image: url(../images/icon.svg/antenna\ 1.svg);
+}
+.content .work .icon2::before {
+  background-image: url(../images/icon.svg/clock\ 1.svg);
+}
+.content .work .icon3::before {
+  background-image: url(../images/icon.svg/diagram\ 1.svg);
+}
+.content .work .icon4::before {
+  background-image: url(../images/icon.svg/astronaut\ 1.svg);
+}
 
 .content .work-main {
   display: flex;
@@ -309,6 +347,7 @@ b {
   padding-top: 30px;
   padding-bottom: 30px;
 }
+
 .employees-main {
   padding-bottom: 10px;
 
@@ -316,11 +355,115 @@ b {
   font-size: 16px;
   line-height: 1.18;
 }
-
 .employees-secondary {
   color: var(--secondary-color);
   font-size: 16px;
   line-height: 1.18;
+}
+
+.employees-div .list {
+  display: flex;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-top: 16px;
+
+  align-items: center;
+
+  /* outline: 1px solid tomato; */
+}
+
+.employees-div .item {
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  content: "";
+  background-position: center;
+  background-size: 20px;
+  background-repeat: no-repeat;
+
+  outline: 1px solid tomato;
+}
+.employees-div .item:hover,
+.employees-div .item:focus{
+  background-color:var(--akcent);
+}
+.employees-div .item:not(:last-child) {
+  margin-right: 10px;
+}
+.employees-div .item.insta {
+  background-image: url(../images/icon.svg/instagram\ 2.svg);
+}
+.employees-div .item.twit {
+  background-image: url(../images/icon.svg/twitter\ 1.svg);
+}
+.employees-div .item.faceb {
+  background-image: url(../images/icon.svg/facebook\ 1.svg);
+}
+.employees-div .item.in {
+  background-image: url(../images/icon.svg/linkedin\ 1.svg);
+}
+
+.div2{
+  display: flex;
+  width: 206px;
+  margin-left: 32px;
+  margin-right: 32px;
+  margin-top: 16px;
+
+  align-items: center;
+
+  outline: 1px solid tomato;
+}
+.div2 .item{
+  display: inline-block;
+  padding: 0;
+  width: 44px;
+  height: 44px;
+}
+.div2 .item .icon{
+  display: inline-block;
+
+  outline: 1px solid tomato;
+}
+
+
+/* permanent-clients --------------------------------------- */
+.permanent-clients{
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+
+.permanent-clients .head-text{
+  margin-bottom: 50px;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+.permanent-clients .list{
+  display: flex;
+}
+.permanent-clients .item{
+  width: 170px;
+  height: 92px;
+  border: 1px solid #AFB1B8;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+.permanent-clients .item:hover,
+.permanent-clients .item:focus{
+  border: 1px solid var(--akcent)
+}
+.permanent-clients .item:not(:last-child){
+  margin-right: 30px;
+}
+
+.permanent-clients .item .logo{
+  display: inline-block;
+  width: 106px;
+  height: 60px;
 }
 
 /* content two page ---------------------------------------- */
@@ -355,12 +498,17 @@ main.main {
   padding: 0;
   text-decoration: none;
 }
-.photo-main {
-  display: block;
-  padding-bottom: 8px;
-  padding-top: 20px;
-  padding-left: 24px;
 
+.photo-div {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+
+  border: 1px solid #eeeeee;
+}
+
+.photo-main {
   color: var(--primery-text-cplor);
   font-weight: 700;
   font-size: 18px;
@@ -368,10 +516,6 @@ main.main {
   letter-spacing: 0.06em;
 }
 .photo-secondary {
-  display: block;
-  padding-left: 24px;
-  padding-bottom: 20px;
-
   color: var(--secondary-color);
   font-size: 18px;
   line-height: 1.97;
@@ -383,16 +527,19 @@ footer {
   padding-bottom: 60px;
   background-color: var(--color-fon-hed-fot);
 }
-
+.footer.conteiner{
+  display: flex;
+}
 .footer .logo {
-  display: block;
+  display: inline-block;
   margin-bottom: 20px;
 }
 .footer-studio {
   color: var(--primary-wite-color);
 }
+
 .footer .footer-adres {
-  display: block;
+  display: inline-block;
   margin-bottom: 8px;
 
   color: #fff;
@@ -401,7 +548,7 @@ footer {
   text-decoration: none;
 }
 .footer .footer-nav {
-  display: block;
+  display: inline-block;
   margin-bottom: 8px;
 
   color: rgba(255, 255, 255, 0.6);
@@ -409,16 +556,69 @@ footer {
   line-height: 1.7;
   text-decoration: none;
 }
+/* ----------------------- */
+.footer .dop-info {
+  margin-left: 70px;
+  /* outline: 1px solid tomato; */
+}
+.footer .dop-info .main {
+  display: flex;
+  padding-bottom: 20px;
+  color: var(--primary-wite-color);
+}
 
-/* support information---------------------------------------- */
+.footer .dop-info .list {
+  display: flex;
+
+  align-items: center;
+
+  /* outline: 1px solid tomato; */
+}
+.footer .dop-info .item {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+
+  content: "";
+  background-position: center;
+  background-size: 20px;
+  background-repeat: no-repeat;
+
+  /* outline: 1px solid tomato; */
+}
+.footer .dop-info .item:not(:last-child) {
+  margin-right: 10px;
+}
+.footer .dop-info .item:hover,
+.footer .dop-info .item:focus{
+  background-color:var(--akcent);
+}
+.footer .dop-info .item.insta {
+  background-image: url(../images/icon.svg/instagram\ wite.svg);
+}
+.footer .dop-info .item.twit {
+  background-image: url(../images/icon.svg/twitter\ wite.svg);
+}
+.footer .dop-info .item.faceb {
+  background-image: url(../images/icon.svg/facebook\ wite.svg);
+}
+.footer .dop-info .item.in {
+  background-image: url(../images/icon.svg/linkedin\ wite.svg);
+}
+
+/* support inform
+/* support information----------------------------
 
 /* wite: #FFFFFF */
-/* color header and footer: rgba(47, 48, 58, 1) */
-/* secondary color page: rgba(245, 244, 250, 1) */
+/* color header and footer: r
+/* color header and footer:
 
 /* akcent color: #2196F3 */
 
-/* main text color: #212121 */
-/* secondary text color: rgba(117, 117, 117, 1) */
 
-/* color secondary text address: rgba(255, 255, 255, 0.6) */
+/* akcent color: #2196F3 */
+
+/* main text color: #
+/* main text color: #212121 */
+/* secondary text color: rgba
