--- a/css/styles.css
+++ b/css/styles.css
@@ -369,7 +369,7 @@ header {
 
   align-items: center;
 
-  /* outline: 1px solid tomato; */
+  outline: 1px solid tomato;
 }
 
 .employees-div .item {
@@ -405,7 +405,7 @@ header {
   background-image: url(../images/icon.svg/linkedin\ 1.svg);
 }
 
-.div2{
+/* .div2{
   display: flex;
   width: 206px;
   margin-left: 32px;
@@ -426,7 +426,7 @@ header {
   display: inline-block;
 
   outline: 1px solid tomato;
-}
+} */
 
 
 /* permanent-clients --------------------------------------- */
