--- a/css/styles.css
+++ b/css/styles.css
@@ -174,18 +174,28 @@ header {
   align-items: center;
 
   color: var(--secondary-color);
-  font-weight: 500;
+
+  /* font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em;
+  letter-spacing: 0.02em; */
+
   text-decoration: none;
 }
 .site-auth .link:hover,
 .site-auth .link:focus {
   color: var(--akcent);
 }
+.site-auth .link .item{
+  display: inline-block;
+  padding: 0;
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
+  fill: currentColor;
+}
 
-.site-auth .link::before {
+/* .site-auth .link::before {
   width: 16px;
   height: 16px;
   margin-right: 10px;
@@ -200,7 +210,7 @@ header {
 }
 .item-smartp::before {
   background-image: url(../images/icon.svg/smartphone.svg);
-}
+} */
 
 /* MAIN ---------------------------------------- */
 
@@ -385,7 +395,7 @@ header {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-color: #afb1b8;
+  color: #afb1b8;
 
   /* outline:  1px solid tomato; */
 }
@@ -401,7 +411,7 @@ color: #afb1b8;
 }
 .employees-div .items .icon:hover,
 .employees-div .items .icon:focus{
-fill: currentColor;
+ fill: currentColor; 
 }
 /* .employees-div .item.insta {
   background-image: url(../images/icon.svg/instagram\ 2.svg);
@@ -574,7 +584,8 @@ footer {
   /* outline: 1px solid tomato; */
 }
 .footer .dop-info .main {
-  display: flex;
+  display:inline-block;
+  padding-top: 15px;
   padding-bottom: 20px;
   color: var(--primary-wite-color);
 }
@@ -586,27 +597,33 @@ footer {
 
   /* outline: 1px solid tomato; */
 }
-.footer .dop-info .item {
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  background-color: rgba(255, 255, 255, 0.1);
 
-  content: "";
-  background-position: center;
-  background-size: 20px;
-  background-repeat: no-repeat;
-
-  /* outline: 1px solid tomato; */
-}
 .footer .dop-info .item:not(:last-child) {
   margin-right: 10px;
 }
-.footer .dop-info .item:hover,
-.footer .dop-info .item:focus{
+
+.footer .dop-info .items {
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+
+
+  /* outline: 1px solid tomato; */
+}
+.footer .dop-info .items:hover,
+.footer .dop-info .items:focus{
   background-color:var(--akcent);
 }
-.footer .dop-info .item.insta {
+
+.footer .dop-info .icon:hover,
+.footer .dop-info .icon:focus{
+  fill: currentColor;
+}
+
+/* .footer .dop-info .item.insta {
   background-image: url(../images/icon.svg/instagram\ wite.svg);
 }
 .footer .dop-info .item.twit {
@@ -617,7 +634,7 @@ footer {
 }
 .footer .dop-info .item.in {
   background-image: url(../images/icon.svg/linkedin\ wite.svg);
-}
+} */
 
 /* support inform
 /* support information----------------------------
