--- a/css/styles.css
+++ b/css/styles.css
@@ -623,11 +623,13 @@ footer {
 .footer .dop-info .icon{
   margin-left: 12px;
   margin-top: 12px;
-}
-.footer .dop-info .icon:hover,
-.footer .dop-info .icon:focus{
   fill: currentColor;
 }
+
+/* .footer .dop-info .icon:hover,
+.footer .dop-info .icon:focus{
+  fill: currentColor;
+} */
 
 /* .footer .dop-info .item.insta {
   background-image: url(../images/icon.svg/instagram\ wite.svg);
