--- a/css/styles.css
+++ b/css/styles.css
@@ -492,7 +492,7 @@ header {
   width: 106px;
   height: 60px;
   margin-top: 16px;
-  margin-right: 32px;
+  margin-left: 32px;
   fill: currentColor;
 }
 
