--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,7 @@ header {
   border: 1px solid var(--akcent)
 }
 
-.permanent-clients .item .logo{
+.permanent-clients .item .logos{
   display: inline-block;
   width: 106px;
   height: 60px;
@@ -495,7 +495,7 @@ header {
   margin-left: 32px;
   fill: currentColor;
 
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
 }
 
 /* content two page ---------------------------------------- */
