--- a/css/styles.css
+++ b/css/styles.css
@@ -474,6 +474,7 @@ header {
 }
 .permanent-clients .items{
   display: inline-block;
+  padding: 0;
   width: 170px;
   height: 92px;
   border: 1px solid #AFB1B8;
@@ -489,6 +490,7 @@ header {
 
 .permanent-clients .item .logos{
   display: inline-block;
+  padding: 0;
   width: 106px;
   height: 60px;
   margin-top: 16px;
