--- a/css/styles.css
+++ b/css/styles.css
@@ -174,10 +174,10 @@ header {
 
   color: var(--secondary-color);
 
-  /* font-weight: 500;
+  font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.02em; */
+  letter-spacing: 0.02em;
 
   text-decoration: none;
 }
